--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,11 @@
 ---
-title: "personal_blog"
+title: "A technical ML blog"
 listing:
   contents: posts
   sort: "date desc"
   type: default
   categories: true
+  feed: true
   sort-ui: false
   filter-ui: false
 page-layout: full
