--- a/posts/hello_world/index.qmd
+++ b/posts/hello_world/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Welcome To My Blog"
-author: "Tristan O'Malley"
-date: "2024-02-11"
+title: "Hello blogging world"
+author: "Guillaume Kunsch"
+date: "2024-02-14"
 categories: [news]
 ---
 
