--- a/index.qmd
+++ b/index.qmd
@@ -4,11 +4,11 @@ listing:
   contents: posts
   sort: "date desc"
   type: default
-  categories: true
+  categories: false
   feed: true
   sort-ui: false
   filter-ui: false
-page-layout: full
+page-layout: article
 title-block-banner: true
 ---
 
