--- a/posts/fisher_information/index.qmd
+++ b/posts/fisher_information/index.qmd
@@ -6,6 +6,8 @@ categories: [Maths]
 bibliography: references.bib
 link-citations: true
 draft: false
+bread-crumbs: false
+page-navigation: false
 ---
 
 # Intro
