--- a/posts/fisher_information/index.qmd
+++ b/posts/fisher_information/index.qmd
@@ -5,7 +5,7 @@ date: "2024-02-14"
 categories: [Maths]
 bibliography: references.bib
 link-citations: true
-draft: false
+draft: true
 ---
 
 # Intro
